Add collection instrument form type check eq and seft (#297)
* Add form_type check for EQ_AND_SEFT survey mode
